something of css its added

--- a/index.html
+++ b/index.html
@@ -8,13 +8,18 @@
     <title>Reto Hola Juniors!</title>
 </head>
 <body>
-    <div class="header" id="sectionTitle">
-        <a href="https://holajuniors.com/crear-y-vender-una-plantillas-html-y-css/" id="linkHolaJuniors">
-            <h1 class="Title">Reto HolaJuniors</h1>
-        </a>
-        <a href="mailto:nicoanriquez23@gmail.com">
-            <button class="EmailBtn">Email</button> 
-        </a>
+    <div class="header">
+        <div class="Title">
+            <a href="https://holajuniors.com/crear-y-vender-una-plantillas-html-y-css/" id="linkHolaJuniors">
+                <h1>Reto HolaJuniors</h1>
+            </a>
+            <div class="EmailBtn">
+                <a href="mailto:nicoanriquez23@gmail.com" >
+                    <button id="emailbutton">Email</button> 
+                </a>
+            </div> 
+        </div>
+        
     </div>
 
     <div class="presentation">
