--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./index.css"/>
+    
     <title>Reto Hola Juniors!</title>
 </head>
 <body>
@@ -23,10 +24,14 @@
     </div>
 
     <div class="presentation">
-        <h3 class="present" id="presentation">Hi! my name is Nico, and i`m a Front-End Developer</h3>
-        <p class="present" id="description">
-            My passion its make videogames and sometime disegn things, let me introduce you my works and my experience like a Front-End Developer, if you like some thing that you see, make me know in my <a href="https://twitter.com/SoyNicoAquino">twitter!</a>!
-        </p>
+        <div class="presentationText">
+            <h3 class="present" id="presentation">
+                Hi! my name is Nico, and i`m a Front-End Developer
+            </h3>
+            <p class="present" id="description">
+                My passion its make videogames and sometime disegn things, let me introduce you my works and my experience like a Front-End Developer, if you like some thing that you see, make me know in my <a href="https://twitter.com/SoyNicoAquino">twitter!</a>!
+            </p>
+        </div>
         <div class="profileImg">
             <img src="./img/profile.jpg">
         </div>
