its just a space

--- a/index.html
+++ b/index.html
@@ -54,7 +54,8 @@
     </div>
     <div class="socialNetworks">
         <p id="goodbye">
-            this its all of me, now if you have a project or have a nice idea for work together, dont think a lot, <a href="mailto:nicoanriquez23@gmail.com">contact me!</a>
+            this its all of me, now if you have a project or have a nice idea for work together, dont think a lot, 
+            <a href="mailto:nicoanriquez23@gmail.com">contact me!</a>
         </p>
         
         <div class="socialNetworkImg">
