project bar maked, missing styled the box for the projects

--- a/index.html
+++ b/index.html
@@ -37,27 +37,36 @@
             <img src="./img/profile.jpg">
         </div>
     </div>
-    <div class="projects" id="seccionProjects">
+    <main class="projects" id="seccionProjects">
         <h2 class="articlesTitle">My Projects</h2>
-        <a href="https://github.com/NicoAquino67/mokepnt" id="mokepont">
-            <article class="project" id="HtmlCssJavascript">
-               <h4 class="articleTitle">Mokepont!</h4>
-               mokepont its a project where i learn how work html, css and javascript together, and its a game! but its not a copy 😜😜
-            </article>
-        </a>
-        <a href="https://github.com/NicoAquino67/cursoProgramacionBasica" id="BasicPrograming">
-            <article class="project" id="cursoProgramacionBasica">
-                <h4 class="articleTitle">Course of Basic Programation</h4>
-                its a introductory project for learn about programation and algorithms. imparted by <a href="https://platzi.com">Platzi</a>
-            </article>
-        </a>
-        <a href="https://github.com/NicoAquino67/horas-de-trabajo-" id="workTimeTable">
-            <article class="project" id="WorkTimeTable">
-                <h4 class="articleTitle">Working Time Table</h4>
-                This repository its a table where you can calculate the time of your work and follow your salary, know your hours/work and more.
-            </article>
-        </a>
-    </div>
+        <div class="repo" id="project1">
+            <a href="https://github.com/NicoAquino67/mokepnt" id="mokepont">
+                <img src="./img/projects/mokeLogo.png" class="projectIMG">
+                <p class="project" id="HtmlCssJavascript">
+                    <h4 class="articleTitle">Mokepont!</h4>
+                    mokepont its a project where i learn how work html, css and javascript together, and its a game! but its not a copy 😜😜
+                </p>
+            </a>
+        </div>
+        <div class="repo" id="project2">
+            <a href="https://github.com/NicoAquino67/cursoProgramacionBasica" id="BasicPrograming">
+                <img src="./img/projects/platziCurso.png" class="projectIMG">
+                <p class="project" id="cursoProgramacionBasica">
+                    <h4 class="articleTitle">Course of Basic Programation</h4>
+                    its a introductory project for learn about programation and algorithms. imparted by <a href="https://platzi.com/cursos/basico-programacion/">Platzi</a>
+                </p>
+            </a>
+        </div>
+        <div class="repo" id="project3">
+            <a href="https://github.com/NicoAquino67/horas-de-trabajo-" id="workTimeTable">
+                <img src="./img/projects/WorkingTimeTable.jpg" class="projectIMG">
+                <p class="project" id="WorkTimeTable">
+                    <h4 class="articleTitle">Working Time Table</h4>
+                    This repository its a table where you can calculate the time of your work and follow your salary, know your hours/work and more.
+                </p>
+            </a>
+        </div>
+    </main>
     <div class="socialNetworks">
         <p id="goodbye">
             this its all of me, now if you have a project or have a nice idea for work together, dont think a lot, <a href="mailto:nicoanriquez23@gmail.com">contact me!</a>
