--- a/index.html
+++ b/index.html
@@ -38,16 +38,16 @@
         </div>
     </div>
     <main class="projects" id="seccionProjects">
-        <h2 class="articlesTitle">My Projects</h2>
-        <div class="repo" id="project1">
-            <a href="https://github.com/NicoAquino67/mokepnt" id="mokepont">
-                <img src="./img/projects/mokeLogo.png" class="projectIMG">
-                <p class="project" id="HtmlCssJavascript">
-                    <h4 class="articleTitle">Mokepont!</h4>
+        <h2 class="articlesTitle" id="princTitle">My Projects</h2>
+        <a href="https://github.com/NicoAquino67/mokepnt" id="mokepont">
+            <div class="repo" id="project1">
+            <img src="./img/projects/mokeLogo.png" class="projectIMG">
+            <h4 class="articleTitle">Mokepont!</h4>
+            <p class="project" id="HtmlCssJavascript">
                     mokepont its a project where i learn how work html, css and javascript together, and its a game! but its not a copy 😜😜
-                </p>
-            </a>
-        </div>
+            </p>
+            </div>
+        </a>
         <div class="repo" id="project2">
             <a href="https://github.com/NicoAquino67/cursoProgramacionBasica" id="BasicPrograming">
                 <img src="./img/projects/platziCurso.png" class="projectIMG">
