--- a/index.html
+++ b/index.html
@@ -10,7 +10,13 @@
 </head>
 
 <body class="grid-container">
-    <header class="header" id="LogoSection">Cooper Amigurumis</header>
+    <header class="header" id="LogoSection">
+        <div class="div-logo" id="mainTitle">
+            <img src="./img/Cooper Logo.png" alt="Cooper Amigurumis">
+            <h1 class="h1" id="amirugumis">Cooper Amigurumis</h1>
+            <h3 class="h3" id="slogan">Tu Mejor Amiguito hecho a mano</h3>
+        </div>
+    </header>
     <nav class="navbar" id="NavSection">Menu</nav>
     <aside class="sidebar" id="SideBar">Barra Lateral</aside>
     <main class="main" id="MainContent">Contenido de la web</main>
