--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
             <h3 class="h3" id="slogan">Tu Mejor Amiguito hecho a mano</h3>
         </div>
     </header>
+    <!-- TODO: add the content-->
     <nav class="navbar" id="NavSection">Menu</nav>
     <aside class="sidebar" id="SideBar">Barra Lateral</aside>
     <main class="main" id="MainContent">Contenido de la web</main>
