--- a/index.html
+++ b/index.html
@@ -12,13 +12,20 @@
 <body class="grid-container">
     <header class="header" id="LogoSection">
         <div class="div-logo" id="mainTitle">
-            <img src="./img/Cooper Logo.png" alt="Cooper Amigurumis">
+            <img src="./img/Cooper Logo 2.png" alt="Cooper Amigurumis">
             <h1 class="h1" id="amirugumis">Cooper Amigurumis</h1>
             <h3 class="h3" id="slogan">Tu Mejor Amiguito hecho a mano</h3>
         </div>
     </header>
     <!-- TODO: add the content-->
-    <nav class="navbar" id="NavSection">Menu</nav>
+    <nav class="navbar" id="NavSection">
+        <ul class="nav" id="menu">
+            <li id="Home">Inicio</li>
+            <li id="works">Trabajos</li>
+            <li id="contact">Contacto</li>
+            <li id="aboutMe">Sobre Mi</li>
+        </ul>
+    </nav>
     <aside class="sidebar" id="SideBar">Barra Lateral</aside>
     <main class="main" id="MainContent">Contenido de la web</main>
     <footer class="footer" id="FooterContactSection">Redes Sociales y contacto!</footer>
