palette color added

--- a/index.html
+++ b/index.html
@@ -15,17 +15,25 @@
             <img src="./img/Cooper Logo 2.png" alt="Cooper Amigurumis">
             <h1 class="h1" id="amirugumis">Cooper Amigurumis</h1>
             <h3 class="h3" id="slogan">Tu Mejor Amiguito hecho a mano</h3>
+            <nav class="navbar" id="NavSection">
+                <ul class="nav" id="menu">
+                    <li id="home">
+                        <a href="#" class="nav-link" id="Home">Inicio</a>
+                    </li>
+                    <li id="works">
+                        <a href="#" class="nav-link" id="Works">Trabajos</a>
+                    </li>
+                    <li id="contact">
+                        <a href="#" class="nav-link" id="Contact">Contacto</a>
+                    </li>
+                    <li id="aboutMe">
+                        <a href="#" class="nav-link" id="AboutMe">Sobre Mi</a>
+                    </li>
+                </ul>
+            </nav>
         </div>
     </header>
     <!-- TODO: add the content-->
-    <nav class="navbar" id="NavSection">
-        <ul class="nav" id="menu">
-            <li id="Home">Inicio</li>
-            <li id="works">Trabajos</li>
-            <li id="contact">Contacto</li>
-            <li id="aboutMe">Sobre Mi</li>
-        </ul>
-    </nav>
     <aside class="sidebar" id="SideBar">Barra Lateral</aside>
     <main class="main" id="MainContent">Contenido de la web</main>
     <footer class="footer" id="FooterContactSection">Redes Sociales y contacto!</footer>
