--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./index.css"/>
+    <script src="https://kit.fontawesome.com/306663a596.js" crossorigin="anonymous"></script>
     <title>Reto Hola Juniors!</title>
 </head>
 
@@ -29,6 +30,9 @@
                         <a href="#" class="nav-link" id="AboutMe">Sobre Mi</a>
                     </li>
                 </ul>
+                <button class="nav-toggle">
+                    <i class="fa-solid fa-bars"></i>
+                </button>
             </nav>
         </div>
     </header>
